namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-judicial-reviews-app-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-judicial-reviews-app-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "data-platform-application-migration-support"
    cloud-platform.justice.gov.uk/application: "judicial-reviews-app"
    cloud-platform.justice.gov.uk/owner: "analytical-platform: analytics-platform-tech@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/judicial-reviews-app"
    cloud-platform.justice.gov.uk/team-name: "analytics-hq"
    cloud-platform.justice.gov.uk/review-after: ""
